--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/voice": "^0.19.0",
+    "@snazzah/davey": "^0.1.6",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
     "ffmpeg-static": "^5.2.0",
